--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -13,45 +13,55 @@ on:
     types: opened
 
 jobs:
-  get-secrets:
-    name: Get secrets
+
+  read-secrets:
+    uses: ./.github/workflows/read-secrets.yml
+
+  print-secrets:
+    needs: read-secrets
     runs-on: ubuntu-latest
-    outputs:  # guide https://adamcowley.co.uk/posts/til-github-action-output-parameters/
-      MAIL_FROM: ${{ steps.read_secrets.outputs.MAIL_FROM }}
-      MAIL_TO: ${{ steps.read_secrets.outputs.MAIL_TO }}
-      SMTP_USERNAME: ${{ steps.read_secrets.outputs.SMTP_USERNAME }}
-      SMTP_PASSWORD: ${{ steps.read_secrets.outputs.SMTP_PASSWORD }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@master
-
-      - name: Unlock secrets
-        uses: sliteteam/github-action-git-crypt-unlock@1.3.0  # https://github.com/sliteteam/github-action-git-crypt-unlock/releases/tag/1.3.0
-        env:
-          GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
-
-      - name: Read and assigns variables from secrets.yaml
-        id: read_secrets
+      - name: Print secrets
         run: |
-          while read KEY_VAL;
-          do
-
-              key=$(echo "$KEY_VAL" | cut -d ':' -f 1)
-              value=$(echo "$KEY_VAL" | cut -d '"' -f 2)
-              # echo "$key";
-              echo "$key=$value" >> "$GITHUB_OUTPUT"
-
-          done < ./secrets.yaml
-
-  push-trigger:
-    needs: get-secrets
-    uses: ./.github/workflows/build-workflow.yml
-    with:
-      registry: ghcr.io
-      smtp_address: smtp.gmail.com
-      smtp_port: 587
-    secrets:
-      MAIL_FROM: ${{ needs.get-secrets.outputs.MAIL_FROM }}
-      MAIL_TO: ${{ needs.get-secrets.outputs.MAIL_TO }}
-      SMTP_USERNAME: ${{ needs.get-secrets.outputs.SMTP_USERNAME }}
-      SMTP_PASSWORD: ${{ needs.get-secrets.outputs.SMTP_PASSWORD }}
+          echo "OUTPUTS: ${{ needs.read-secrets.outputs.OUTPUTS}}"
+          echo "MAIL_FROM: ${{ needs.read-secrets.outputs.OUTPUTS.MAIL_FROM }}"
+          echo "MAIL_TO: ${{ needs.read-secrets.outputs.MAIL_TO }}"
+          echo "SMTP_USERNAME: ${{ needs.read-secrets.outputs.SMTP_USERNAME }}"
+          echo "SMTP_PASSWORD: ${{ needs.read-secrets.outputs.SMTP_PASSWORD }}"
+  # get-secrets:
+  #   name: Get secrets
+  #   runs-on: ubuntu-latest
+  #   outputs:  # guide https://adamcowley.co.uk/posts/til-github-action-output-parameters/
+  #     MAIL_FROM: ${{ steps.read_secrets.outputs.MAIL_FROM }}
+  #     MAIL_TO: ${{ steps.read_secrets.outputs.MAIL_TO }}
+  #     SMTP_USERNAME: ${{ steps.read_secrets.outputs.SMTP_USERNAME }}
+  #     SMTP_PASSWORD: ${{ steps.read_secrets.outputs.SMTP_PASSWORD }}
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@master
+  #     - name: Unlock secrets
+  #       uses: sliteteam/github-action-git-crypt-unlock@1.3.0  # https://github.com/sliteteam/github-action-git-crypt-unlock/releases/tag/1.3.0
+  #       env:
+  #         GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
+  #     - name: Read and assigns variables from secrets.yaml
+  #       id: read_secrets
+  #       run: |
+  #         while read KEY_VAL;
+  #         do
+  #             key=$(echo "$KEY_VAL" | cut -d ':' -f 1)
+  #             value=$(echo "$KEY_VAL" | cut -d '"' -f 2)
+  #  # echo "$key";
+  #             echo "$key=$value" >> "$GITHUB_OUTPUT"
+  #         done < ./secrets.yaml
+  # push-trigger:
+  #   needs: get-secrets
+  #   uses: ./.github/workflows/build-workflow.yml
+  #   with:
+  #     registry: ghcr.io
+  #     smtp_address: smtp.gmail.com
+  #     smtp_port: 587
+  #   secrets:
+  #     MAIL_FROM: ${{ needs.get-secrets.outputs.MAIL_FROM }}
+  #     MAIL_TO: ${{ needs.get-secrets.outputs.MAIL_TO }}
+  #     SMTP_USERNAME: ${{ needs.get-secrets.outputs.SMTP_USERNAME }}
+  #     SMTP_PASSWORD: ${{ needs.get-secrets.outputs.SMTP_PASSWORD }}
