--- a/.github/workflows/read-secrets.yml
+++ b/.github/workflows/read-secrets.yml
@@ -4,115 +4,39 @@ name: read-secrets
 on:
   workflow_call:
     inputs:
-      registry:
-        description: Remote registry to push the Docker image to
-        default: ghcr.io
-        required: false
+      secrets_path:
+        description: Path to secrets file
+        default: ./secrets.yaml
         type: string
-
-      smtp_address:
-        description: SMTP server to send email notifications
-        default: smtp.gmail.com
-        required: false
-        type: string
-
-      smtp_port:
-        description: SMTP server port
-        default: 587
-        required: false
-        type: number
-
-    secrets:
-      smtp_username:
-        description: SMTP username
-        required: true
-
-      smtp_password:
-        description: SMTP password
-        required: true
-
-      mail_to:
-        description: Email address to send notifications to
-        required: true
-
-      mail_from:
-        description: Email address to send notifications from
-        required: true
+    # secrets:
+    #   secrets:
+    #     description: A list of secrets parsed from the secrets file
+    #     required: true
 
 jobs:
-  build:
+  get-secrets:
+    name: Get secrets
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: angular
-
+    outputs:  # guide https://adamcowley.co.uk/posts/til-github-action-output-parameters/
+      OUTPUTS: ${{ steps.read_secrets.outputs }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@master
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: angular/package.json
-
-      - name: Install packages
-        run: npm ci
-
-      - name: Lint code
-        run: npm run lint
-
-      - name: Run tests
-        run: npm run coverage -- --browsers=ChromeHeadless
-
-      - name: Build
-        run: npm run build
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ inputs.registry }}
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
-
-      - name: Preparing Docker tags
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ inputs.registry }}/${{ github.repository }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-
-      - name: Calculate Steps Log Time
-        if: always()
-        id: duration
-        uses: RockyIsHere/actions-calculate-log-time@v0.2.4
-        with:
-          start_time: ${{ github.event.workflow_run.created_at }}
+      - name: Unlock secrets
+        uses: sliteteam/github-action-git-crypt-unlock@1.3.0  # https://github.com/sliteteam/github-action-git-crypt-unlock/releases/tag/1.3.0
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
 
-      - name: Send email notification on workflow status
-        if: always()
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: ${{ inputs.smtp_address }}
-          server_port: ${{ inputs.smtp_port }}
-          username: ${{ secrets.smtp_username }}
-          password: ${{ secrets.smtp_password }}
-          subject: ${{ github.repository }} ${{ github.workflow }} ${{ job.status }}
-          priority: high
-          to: ${{ secrets.mail_to }}
-          from: ${{ secrets.mail_from }}
-          convert_markdown: true
-          html_body: |-
-            ### testing-code ${{ job.status }}
-            *Duration*: ${{ steps.duration.outputs.duration }}
-            ${{ github.repository }}: [${{ github.ref }}@${{ github.sha }}](${{ github.server_url }}/${{ github.repository }}/actions)
+      - name: Read and assigns variables from secrets.yaml
+        id: read_secrets
+        run: |-
+          while read KEY_VAL;
+          do
+
+              key=$(echo "$KEY_VAL" | cut -d ':' -f 1)
+              value=$(echo "$KEY_VAL" | cut -d '"' -f 2)
+              # echo "$key";
+              echo "$key=$value" >> "$GITHUB_OUTPUT"
+
+          done < ./secrets.yaml
