--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -19,53 +19,35 @@ jobs:
     with:
       secrets_path: ./secrets.yaml
     secrets:
-      GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
+      git_crypt_key: ${{ secrets.GIT_CRYPT_KEY }}
 
-  print-secrets:
+  set-env-secrets:
     needs: read-secrets
     runs-on: ubuntu-latest
+    outputs:
+      MAIL_FROM: ${{ steps.set_env.outputs.MAIL_FROM }}
+      MAIL_TO: ${{ steps.set_env.outputs.MAIL_TO }}
+      SMTP_USERNAME: ${{ steps.set_env.outputs.SMTP_USERNAME }}
+      SMTP_PASSWORD: ${{ steps.set_env.outputs.SMTP_PASSWORD }}
     steps:
-      - name: Print secrets
+      - name: Read environment variables with jq and define them
+        id: set_env
         run: |
-          echo "OUTPUTS: ${{ needs.read-secrets.outputs.OUTPUTS}}"
-          echo "MAIL_FROM: ${{ needs.read-secrets.outputs.OUTPUTS.MAIL_FROM }}"
-          echo "MAIL_TO: ${{ needs.read-secrets.outputs.MAIL_TO }}"
-          echo "SMTP_USERNAME: ${{ needs.read-secrets.outputs.SMTP_USERNAME }}"
-          echo "SMTP_PASSWORD: ${{ needs.read-secrets.outputs.SMTP_PASSWORD }}"
-  # get-secrets:
-  #   name: Get secrets
-  #   runs-on: ubuntu-latest
-  #   outputs:  # guide on https://adamcowley.co.uk/posts/til-github-action-output-parameters/
-  #     MAIL_FROM: ${{ steps.read_secrets.outputs.MAIL_FROM }}
-  #     MAIL_TO: ${{ steps.read_secrets.outputs.MAIL_TO }}
-  #     SMTP_USERNAME: ${{ steps.read_secrets.outputs.SMTP_USERNAME }}
-  #     SMTP_PASSWORD: ${{ steps.read_secrets.outputs.SMTP_PASSWORD }}
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@master
-  #     - name: Unlock secrets
-  #       uses: sliteteam/github-action-git-crypt-unlock@1.3.0  # https://github.com/sliteteam/github-action-git-crypt-unlock/releases/tag/1.3.0
-  #       env:
-  #         GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
-  #     - name: Read and assigns variables from secrets.yaml
-  #       id: read_secrets
-  #       run: |
-  #         while read KEY_VAL;
-  #         do
-  #             key=$(echo "$KEY_VAL" | cut -d ':' -f 1)
-  #             value=$(echo "$KEY_VAL" | cut -d '"' -f 2)
-  #  # echo "$key";
-  #             echo "$key=$value" >> "$GITHUB_OUTPUT"
-  #         done < ./secrets.yaml
-  # push-trigger:
-  #   needs: get-secrets
-  #   uses: ./.github/workflows/build-workflow.yml
-  #   with:
-  #     registry: ghcr.io
-  #     smtp_address: smtp.gmail.com
-  #     smtp_port: 587
-  #   secrets:
-  #     MAIL_FROM: ${{ needs.get-secrets.outputs.MAIL_FROM }}
-  #     MAIL_TO: ${{ needs.get-secrets.outputs.MAIL_TO }}
-  #     SMTP_USERNAME: ${{ needs.get-secrets.outputs.SMTP_USERNAME }}
-  #     SMTP_PASSWORD: ${{ needs.get-secrets.outputs.SMTP_PASSWORD }}
+          json_secret='${{ needs.read-secrets.outputs.secrets }}'
+          echo "MAIL_FROM=$(echo "$json_secret" | jq -r '.MAIL_FROM')" >> $GITHUB_OUTPUT
+          echo "MAIL_TO=$(echo "$json_secret" | jq -r '.MAIL_TO')" >> $GITHUB_OUTPUT
+          echo "SMTP_USERNAME=$(echo "$json_secret" | jq -r '.SMTP_USERNAME')" >> $GITHUB_OUTPUT
+          echo "SMTP_PASSWORD=$(echo "$json_secret" | jq -r '.SMTP_PASSWORD')" >> $GITHUB_OUTPUT
+
+  push-trigger:
+    needs: set-env-secrets
+    uses: ./.github/workflows/build-workflow.yml
+    with:
+      registry: ghcr.io
+      smtp_address: smtp.gmail.com
+      smtp_port: 587
+    secrets:
+      MAIL_FROM: ${{ needs.set-env-secrets.outputs.MAIL_FROM }}
+      MAIL_TO: ${{ needs.set-env-secrets.outputs.MAIL_TO }}
+      SMTP_USERNAME: ${{ needs.set-env-secrets.outputs.SMTP_USERNAME }}
+      SMTP_PASSWORD: ${{ needs.set-env-secrets.outputs.SMTP_PASSWORD }}
