--- a/.github/workflows/read-secrets.yml
+++ b/.github/workflows/read-secrets.yml
@@ -5,20 +5,24 @@ on:
   workflow_call:
     inputs:
       secrets_path:
-        description: Path to secrets file
+        description: Path to the secrets file
         default: ./secrets.yaml
         type: string
-    # secrets:
-    #   secrets:
-    #     description: A list of secrets parsed from the secrets file
-    #     required: true
+    secrets:
+      git_crypt_key:
+        description: A `github.GIT_CRYPT_KEY` secret
+        required: true
+    outputs:
+      secrets:
+        description: All secrets as a JSON object
+        value: ${{ jobs.get-secrets.outputs.END_OUTPUT }}
 
 jobs:
   get-secrets:
     name: Get secrets
     runs-on: ubuntu-latest
     outputs:  # guide https://adamcowley.co.uk/posts/til-github-action-output-parameters/
-      OUTPUTS: ${{ steps.read_secrets.outputs }}
+      END_OUTPUT: ${{ steps.read_secrets.outputs.secrets }}
     steps:
       - name: Checkout code
         uses: actions/checkout@master
@@ -26,17 +30,20 @@ jobs:
       - name: Unlock secrets
         uses: sliteteam/github-action-git-crypt-unlock@1.3.0  # https://github.com/sliteteam/github-action-git-crypt-unlock/releases/tag/1.3.0
         env:
-          GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
+          GIT_CRYPT_KEY: ${{ secrets.git_crypt_key }}
 
-      - name: Read and assigns variables from secrets.yaml
+      - name: Read and assign variables from secrets.yaml
         id: read_secrets
         run: |-
-          while read KEY_VAL;
-          do
+          secrets_json=$(python - <<EOF
+          import yaml
+          import json
 
-              key=$(echo "$KEY_VAL" | cut -d ':' -f 1)
-              value=$(echo "$KEY_VAL" | cut -d '"' -f 2)
-              # echo "$key";
-              echo "$key=$value" >> "$GITHUB_OUTPUT"
+          with open('${{ inputs.secrets_path }}', 'r') as file:
+              yaml_content = yaml.safe_load(file)
 
-          done < ${{inputs.secrets_path}}
+          json_content = json.dumps(yaml_content)
+
+          print(json_content)
+          EOF)
+          echo "secrets=$secrets_json" >> "$GITHUB_OUTPUT"
